# router/measurement.js
@@ -5,24 +5,27 @@ const authenticateToken = require('../middleware/authenticateToken');
 
 const router = express.Router();
 
-router.get('/', authenticateToken, function (req, res) {
-    let measurements = []
-
-    measurementCollection()
-        .find()
-        .forEach(measurement => {
-            measurement.date = measurement.date.toISOString().split('T')[0]
-            measurements.push(measurement)
-        })
-        .then(() => {
-            res.status(200).json(measurements);
-        })
-        .catch(() => {
-            res.status(500).json({error: "Couldn't fetch the records!"});
-        })
+router.get('/', authenticateToken, async function (req, res) {
+    try {
+        const measurements = [];
+        const measurementCursor = await measurementCollection().find();
+      
+        for await (const measurement of measurementCursor) {
+          measurement.date = measurement.date.toISOString().split('T')[0];
+          const point = await riverPointCollection().findOne({ _id: new ObjectId(measurement.pointId) });
+          measurement.lng = point.loc.coordinates[0];
+          measurement.lat = point.loc.coordinates[1];
+          measurements.push(measurement);
+        }
+      
+        res.status(200).json(measurements);
+    } catch (error) {
+        res.status(500).json({ error: "Couldn't fetch the records!" });
+    }
+      
 });
 
-router.get('/date', authenticateToken, function (req, res) {
+router.get('/date', authenticateToken, async function (req, res) {
     measurementCollection()
         .distinct("date", {})
         .then((dates) => {
@@ -34,7 +37,7 @@ router.get('/date', authenticateToken, function (req, res) {
         })
 });
 
-router.get('/:date/type', authenticateToken, function (req, res) {
+router.get('/:date/type', authenticateToken, async function (req, res) {
     
     const date = new Date(req.params.date);
     measurementCollection()
@@ -47,9 +50,32 @@ router.get('/:date/type', authenticateToken, function (req, res) {
         })
 });
 
-router.get('/:date/:type', authenticateToken, function (req, res) {
-    let measurements = []
+router.get('/type', authenticateToken, async function (req, res) {
+    measurementCollection()
+        .distinct("type", {})
+        .then((types) => {
+            res.status(200).json(types);
+        })
+        .catch(() => {
+            res.status(500).json({error: "Couldn't fetch the records!"});
+        })
+});
 
+router.get('/:type/date', authenticateToken, async function (req, res) {
+    
+    const type = req.params.type;
+    measurementCollection()
+        .distinct("date", {type})
+        .then((dates) => {
+            dates = dates.map(date => date.toISOString().split('T')[[0]])
+            res.status(200).json(dates);
+        })
+        .catch(() => {
+            res.status(500).json({error: "Couldn't fetch the records!"});
+        })
+});
+
+router.get('/:date/:type', authenticateToken, async function (req, res) {
     const type = req.params.type;
     const date = new Date(req.params.date);
     if (date.toString() === "Invalid Date"){
@@ -57,37 +83,45 @@ router.get('/:date/:type', authenticateToken, function (req, res) {
         return;
     }
 
-    measurementCollection()
-        .find({date: date, type: type})
-        .forEach(measurement => {
-            measurement.date = measurement.date.toISOString().split('T')[0]
-            measurements.push(measurement)
-        })
-        .then(() => {
-            res.status(200).json(measurements);
-        })
-        .catch(() => {
-            res.status(500).json({error: "Couldn't fetch the records!"});
-        })
+    try {
+        const measurements = [];
+        const measurementCursor = await measurementCollection().find({ date: date, type: type });
+      
+        for await (const measurement of measurementCursor) {
+          measurement.date = measurement.date.toISOString().split('T')[0];
+          
+          const point = await riverPointCollection().findOne({ _id: new ObjectId(measurement.pointId) });
+          measurement.lng = point.loc.coordinates[0];
+          measurement.lat = point.loc.coordinates[1];
+          
+          measurements.push(measurement);
+        }
+      
+        res.status(200).json(measurements);
+      } catch (error) {
+        res.status(500).json({ error: "Couldn't fetch the records!" });
+      }
+      
 });
 
-router.get('/:deviceId', authenticateToken, function (req, res) {
-    let measurements = []
-
-    const deviceId = req.params.deviceId;
-
-    measurementCollection()
-        .find({pointId: new ObjectId(deviceId)})
-        .forEach(measurement => {
-            measurement.date = measurement.date.toISOString().split('T')[0]
-            measurements.push(measurement)
-        })
-        .then(() => {
-            res.status(200).json(measurements);
-        })
-        .catch(() => {
-            res.status(500).json({error: "Couldn't fetch the records!"});
-        })
+router.get('/:deviceId', authenticateToken, async function (req, res) {
+    try {
+        const measurements = [];
+        const deviceId = req.params.deviceId;
+        const measurementCursor = await measurementCollection().find({ pointId: new ObjectId(deviceId) });
+      
+        for await (const measurement of measurementCursor) {
+          measurement.date = measurement.date.toISOString().split('T')[0];
+          const point = await riverPointCollection().findOne({ _id: new ObjectId(measurement.pointId) });
+          measurement.lng = point.loc.coordinates[0];
+          measurement.lat = point.loc.coordinates[1];
+          measurements.push(measurement);
+        }
+      
+        res.status(200).json(measurements);
+    } catch (error) {
+        res.status(500).json({ error: "Couldn't fetch the records!" });
+    }
 });
 
 router.delete('/:measurementId', authenticateToken, function (req, res) {
@@ -105,7 +139,35 @@ router.delete('/:measurementId', authenticateToken, function (req, res) {
         })
 });
 
-router.post('/', authenticateToken, function (req, res) {
+
+router.get('/catalog/:date/:type', authenticateToken, async function (req, res) {
+    
+    try {
+        const type = req.params.type;
+        const date = new Date(req.params.date);
+        if (date.toString() === "Invalid Date"){
+            res.status(400).json({error: "Date should be valid!"});
+            return;
+        }
+
+        let min = Infinity;
+        let max = -Infinity;
+        await measurementCollection()
+            .find({ date: date, type: type })
+            .forEach((measurement) => {
+                min = Math.min(min, measurement.value);
+                max = Math.max(max, measurement.value);
+            });
+
+        res.status(200).json({"min-value": min, "max-value": max});
+
+    } catch (error) {
+        res.status(500).json({ error: "Couldn't fetch the records!" });
+    }
+});
+
+
+router.post('/', authenticateToken, async function (req, res) {
     const measurement = req.body;
     
     if (measurement.pointId === undefined || measurement.date === undefined || measurement.type === undefined || measurement.value === undefined){
